tests/machine/x/scala/group_by.error
exit status 1
/workspace/mochi/tests/machine/x/scala/group_by.scala:4: error: value map is not a member of (Any, List[scala.collection.immutable.Map[String,Any]])
    val stats = ((for { person <- people } yield (person("city"), (person))).groupBy(_._1).map{ case(k,list) => (k, list.map(_._2)) }.toList).map{ case(gKey,gItems) => { val g = (gKey, gItems); Map("city" -> (g._1), "count" -> ((g)._2.size), "avg_age" -> ((for { p <- g } yield p.age).sum.toDouble / (for { p <- g } yield p.age).size)) } }.toList
                                                                                                                                                                                                                                                                            ^
/workspace/mochi/tests/machine/x/scala/group_by.scala:4: error: value map is not a member of (Any, List[scala.collection.immutable.Map[String,Any]])
    val stats = ((for { person <- people } yield (person("city"), (person))).groupBy(_._1).map{ case(k,list) => (k, list.map(_._2)) }.toList).map{ case(gKey,gItems) => { val g = (gKey, gItems); Map("city" -> (g._1), "count" -> ((g)._2.size), "avg_age" -> ((for { p <- g } yield p.age).sum.toDouble / (for { p <- g } yield p.age).size)) } }.toList
                                                                                                                                                                                                                                                                                                                        ^
/workspace/mochi/tests/machine/x/scala/group_by.scala:7: error: Nothing does not take parameters
      println((s("city")) + " " + (": count =") + " " + (s("count")) + " " + (", avg_age =") + " " + (s("avg_age")))
                ^
/workspace/mochi/tests/machine/x/scala/group_by.scala:7: error: Nothing does not take parameters
      println((s("city")) + " " + (": count =") + " " + (s("count")) + " " + (", avg_age =") + " " + (s("avg_age")))
                                                          ^
/workspace/mochi/tests/machine/x/scala/group_by.scala:7: error: Nothing does not take parameters
      println((s("city")) + " " + (": count =") + " " + (s("count")) + " " + (", avg_age =") + " " + (s("avg_age")))
                                                                                                       ^
5 errors found
